feat(mcq): rebuild java-pattern-matching-interview.md to multi-line educational format
Co-Authored-By: Claude Opus 4.7 (1M context) <noreply@anthropic.com>